syntax = "proto3";
package main;

import "google/protobuf/descriptor.proto";

message Schema {
    message Range {
        int64 min = 1;
        int64 max = 2;
    }

    // message FloatRange {
    //   double min = 1;
    //   double max = 2;
    // }

    string description = 10;

    uint64 min_length = 11;
    uint64 max_length = 12;

    uint64 min_items = 13;
    uint64 max_items = 14;

    oneof rule {
        string ref = 1;
        string pattern = 2;
        // string schema = 3; // "raw" schema. example: "{'type':'integer', 'maximum': 100}"

        int64 min = 4;
        int64 max = 5;
        Range range = 6;

        // int64 float_min = 7;
        // int64 float_max = 8;
        // FloatRange float_range = 9;
    }
}

extend google.protobuf.FieldOptions {
    Schema json_schema = 51000;
}
